refactor the code

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <!-- <app-products></app-products> -->
 <router-outlet> </router-outlet>
 <!-- Footer -->
-<app-footer></app-footer>
+<app-footer style="margin-bottom: 0; max-width: 20%;"></app-footer>
