--- a/src/app/productPage/footer/footer.component.html
+++ b/src/app/productPage/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="text-center text-lg-start bg-light text-muted" style="max-height: 25%;" style="margin: 8px; padding: 5px; bottom: 0%; position: relative;">
+<footer class=" fixed-bottom mt-auto text-center text-lg-start bg-light text-muted" style="max-height: 25%;" style="margin: 8px; padding: 5px; bottom: 0%; position: relative;">
     <!-- Section: Social media -->
     <section
       class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom"
@@ -17,6 +17,7 @@
         </a>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-twitter"></i>
+         
         </a>
         <a href="" class="me-4 text-reset">
           <i class="fab fa-google"></i>
