--- a/src/app/edit-product/edit-product.component.html
+++ b/src/app/edit-product/edit-product.component.html
@@ -1,6 +1,6 @@
 
 <div style="width: 50%; margin: auto; text-align: center;">
-  <h1>Edit Product</h1>
+  <h1>Edit Product Details</h1>
   <form (ngSubmit)="updateProduct()">
     <div class="mb-3">
       <img [src]="selectedProduct.imageUrl" class="img-fluid" alt="Product" />
